--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cloudinary": "^1.29.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "mongoose": "^6.3.2",
