--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "express-formidable": "^1.2.0",
     "mongoose": "^6.3.2",
+    "stripe": "^9.1.0",
     "uid2": "^1.0.0"
   }
 }
